# partner-ai-anthropic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
06-solution-accelerators/claude-agents-geap/: .gitignore  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml
06-solution-accelerators/claude-agents-geap/backend/: Dockerfile  adk_agent.py  firestore_memory.py  firestore_session.py  request_context.py  requirements.txt  server.py  workspace.py
06-solution-accelerators/claude-agents-geap/backend/tools/: __init__.py  artifact_tool.py  claude_code_tool.py  memory_tools.py  test_workspace_tools.py  workspace_tools.py
06-solution-accelerators/claude-agents-geap/bridge/: Dockerfile  agent_card.py  auth.py  downscope.py  main.py  requirements.txt  sandbox.py  sign_helpers.py  test_sign.py  translate.py
06-solution-accelerators/claude-agents-geap/docs/: build.py  cc-claude-code-on-ge-engineering-reference.docx  engineering-reference.md
06-solution-accelerators/claude-agents-geap/infra/: cloudbuild.yaml
06-solution-accelerators/claude-agents-geap/infra/terraform/: .terraform.lock.hcl  artifactregistry.tf  cloudrun.tf  firestore.tf  gke.tf  iam.tf  k8s.tf  outputs.tf  providers.tf  storage.tf  variables.tf  versions.tf
06-solution-accelerators/claude-agents-geap/scripts/: check-env.sh  cuj-test.sh  demo-runbook.md  iso-test.sh  mirror-sandbox-router.sh  register-agent-payload.json  register-agent.sh  sandbox-smoke.sh  smoke.sh  unregister-agent.sh
(+93 files in other folders)
