[project]
name = "claude-code-on-gemini-enterprise"
version = "0.1.0"
description = "Claude Code as a Gemini Enterprise Agent Gallery entry"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".terraform",
    "infra/terraform/.terraform",
    "infra/terraform/bootstrap/.terraform",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["bridge", "backend"]
